--- a/dev/scss/_layout.scss
+++ b/dev/scss/_layout.scss
@@ -52,11 +52,14 @@ header {
 .card {
   max-width: 100%;
   background-color: $card-color;
-  padding: 1em 2em 2em 2em;
+  padding: 1em 1.25em 1.5em 1.25em;
   margin-bottom: 2em;
   box-shadow: -1px 0 1px rgba(133, 133, 133, 0.4),
               1px 0 1px rgba(133, 133, 133, 0.4),
               0 3px 2px rgba(133, 133, 133, 0.4);
+  @media screen and (min-width: 400px) {
+    padding: 1em 2em 2em 2em;
+  }
 }
 
 .formsection {
